# sdl3_multiproctest

./: CMakeLists.txt  README.md  drawtest.c
